2004-04-22  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_adduser): now adds the current timestamp
	in the last_login field of the users table if a user is added.

2004-04-21  Ilja Booij  <ilja@ic-s.nl>

	* imap4.c (IMAPClientHandler): changed i to size_t

	* imaputil.c (stridx): changed return type to size_t

	* imapcommands.c (_ic_authenticate): no checks return value of
	fgets.

	* header.c (read_header): added some my_free statements for
	freeing tmpheader on unexpected events (read errors etc).

	* forward.c (forward): prevented some buffer overflows by
	using snprintf instead if sprintf.

	* dbsearch.c (db_exec_search): added a return statement
	for case IST_DATA_TEXT. Otherwise, it could fall through
	to IST_DATA_BODY.

	* bounce.c (bounce): changed sprintf to snprintf and added
	free statements for freeing sendmail_command.

	* db.c (db_get_reply_body): fixed a FIXME by replacing complex
	code with a strdup()
	(db_isselectable): fixed a FIXME by adding extra check
	(db_noinferiors):  fixed a FIXME by adding extra check
	(db_getmailboxname): fixed a FIXME by replacing complex
	code with a strdup()
	(db_update_pop): added a check to only calculate the new quotum
	if the user_idnr is set earlier in the function.
	(db_send_message_lines): added check to fwrite. This is needed
	for when fwrite fails.
	(db_list_mailboxes_by_regex): free temporay arrays if malloc
	fails.

2004-04-19  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_get_deliver_from_alias): now returns strdup() of ""
	instead of the literal itself. Also, we just use strdup() to
	copy the query result to a new string.
	(db_get_notify_address): use strdup instead of complicated stuff..

	* config.c (ReadConfig): added checks to satisfy splint warnings
	(GetConfigValue): corrected some checks that did not work in the
	form they were in (tests for null pointers that were never null!)

	* acl.c (acl_get_acl): added checks and annotations.
	(acl_listrights): changed to return a string that has