@@ -29,6 +29,170 @@
 #include "auth.h"
 #include "debug.h"
 
+/* Enhanced Status Codes from RFC 1893
+ * Nota Bene: should be updated to include
+ * its successor, RFC 3463, too.
+ * */
+
+
+/* Top level codes */
+static const char * const DSN_STRINGS_CLASS[] = {
+/* nop */	"", ""
+/* 2.. */	"Success",
+/* nop */	"",
+/* 4.. */	"Persistent Transient Failure",
+/* 5.. */	"Permanent Failure"
+};
+
+/* Second the Third level codes */
+static const char * const DSN_STRINGS_SUBJECT[] = {
+/* nop */	"",
+/* .1. */	"Address Status",
+/* .2. */	"Mailbox Status",
+/* .3. */	"Mail System Status",
+/* .4. */	"Network and Routing Status",
+/* .5. */	"Mail Delivery Protocol Status",
+/* .6. */	"Message Content or Message Media Status",
+/* .7. */	"Security or Policy Status"
+};
+
+/* Address Status */
+static const char * const DSN_STRINGS_DETAIL_ONE[] = {
+/* .1.0 */	"Other address status",
+/* .1.1 */	"Bad destination mailbox address",
+/* .1.2 */	"Bad destination system address",
+/* .1.3 */	"Bad destination mailbox address syntax",
+/* .1.4 */	"Destination mailbox address ambiguous",
+/* .1.5 */	"Destination mailbox address valid",
+/* .1.6 */	"Mailbox has moved",
+/* .1.7 */	"Bad sender's mailbox address syntax",
+/* .1.8 */	"Bad sender's system address"
+};
+
+/* Mailbox Status */
+static const char * const DSN_STRINGS_DETAIL_TWO[] = {
+/* .2.0 */	"Other or undefined mailbox status",
+/* .2.1 */	"Mailbox disabled, not accepting messages",
+/* .2.2 */	"Mailbox full",
+/* .2.3 */	"Message length exceeds administrative limit",
+/* .2.4 */	"Mailing list expansion problem"
+};
+
+/* Mail System Status */
+static const char * const DSN_STRINGS_DETAIL_THREE[] = {
+/* .3.0 */	"Other or undefined mail system status",
+/* .3.1 */	"Mail system full",
+/* .3.2 */	"System not accepting network messages",
+/* .3.3 */	"System not capable of selected features",
+/* .3.4 */	"Message too big for system"
+};
+
+/* Network and Routing Status */
+static const char * const DSN_STRINGS_DETAIL_FOUR[] = {
+/* .4.0 */	"Other or undefined network or routing status",
+/* .4.1 */	"No answer from host",
+/* .4.2 */	"Bad connection",
+/* .4.3 */	"Routing server failure",
+/* .4.4 */	"Unable to route",
+/* .4.5 */	"Network congestion",
+/* .4.6 */	"Routing loop detected",
+/* .4.7 */	"Delivery time expired"
+};
+
+/* Mail Delivery Protocol Status */
+static const char * const DSN_STRINGS_DETAIL_FIVE[] = {
+/* .5.0 */	"Other or undefined protocol status",
+/* .5.1 */	"Invalid command",
+/* .5.2 */	"Syntax error",
+/* .5.3 */	"Too many recipients",
+/* .5.4 */	"Invalid command arguments",
+/* .5.5 */	"Wrong protocol version"
+};
+
+/* Message Content or Message Media Status */
+static const char * const DSN_STRINGS_DETAIL_SIX[] = {
+/* .6.0 */	"Other or undefined media error",
+/* .6.1 */	"Media not supported",
+/* .6.2 */	"Conversion required and prohibited",
+/* .6.3 */	"Conversion required but not supported",
+/* .6.4 */	"Conversion with loss performed",
+/* .6.5 */	"Conversion failed"
+};
+
+/* Security or Policy Status */
+static const char * const DSN_STRINGS_DETAIL_SEVEN[] = {
+/* .7.0 */	"Other or undefined security status",
+/* .7.1 */	"Delivery not authorized, message refused",
+/* .7.2 */	"Mailing list expansion prohibited",
+/* .7.3 */	"Security conversion required but not possible",
+/* .7.4 */	"Security features not supported",
+/* .7.5 */	"Cryptographic failure",
+/* .7.6 */	"Cryptographic algorithm not supported",
+/* .7.7 */	"Message integrity failure"
+};
+
+/* Convert the DSN code into a descriptive message. 
+ * Returns 0 on success, -1 on failure. */
+int dsn_tostring(delivery_status_t dsn, const char ** const class,
+                 const char ** const subject, const char ** const detail)
+{
+	if (dsn.class == 2 || dsn.class == 4 || dsn.class == 5)
+		*class = DSN_STRINGS_CLASS[dsn.class];
+	else
+		return -1;
+
+	switch (dsn.subject) {
+		case 1:
+			if (dsn.detail >= 0 && dsn.detail <= 8)
+				*detail = DSN_STRINGS_DETAIL_ONE[dsn.detail];
+			else
+				return -1;
+			break;
+		case 2:
+			if (dsn.detail >= 0 && dsn.detail <= 4)
+				*detail = DSN_STRINGS_DETAIL_TWO[dsn.detail];
+			else
+				return -1;
+			break;
+		case 3:
+			if (dsn.detail >= 0 && dsn.detail <= 4)
+				*detail = DSN_STRINGS_DETAIL_THREE[dsn.detail];
+			else
+				return -1;
+			break;
+		case 4:
+			if (dsn.detail >= 0 && dsn.detail <= 7)
+				*detail = DSN_STRINGS_DETAIL_FOUR[dsn.detail];
+			else
+				return -1;
+			break;
+		case 5:
+			if (dsn.detail >= 0 && dsn.detail <= 5)
+				*detail = DSN_STRINGS_DETAIL_FIVE[dsn.detail];
+			else
+				return -1;
+			break;
+		case 6:
+			if (dsn.detail >= 0 && dsn.detail <= 5)
+				*detail = DSN_STRINGS_DETAIL_SIX[dsn.detail];
+			else
+				return -1;
+			break;
+		case 7:
+			if (dsn.detail >= 0 && dsn.detail <= 7)
+				*detail = DSN_STRINGS_DETAIL_SEVEN[dsn.detail];
+			else
+				return -1;
+			break;
+		default:
+			return -1;
+	}
+
+	/* If we made it this far, then the subject was valid. */
+	*subject = DSN_STRINGS_SUBJECT[dsn.subject];
+
+	return 0;
+}
 
 int dsnuser_init(deliver_to_user_t * dsnuser)
 {
